--- a/.gitignore
+++ b/.gitignore
@@ -21,15 +21,12 @@ config/secrets.yml
 /vendor/bundle
 
 # these should all be checked in to normalize the environment:
-# Gemfile.lock, .ruby-version, .ruby-gemset
-
-# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
-.rvmrc
+Gemfile.lock, .ruby-version, .ruby-gemset
 
 # if using bower-rails ignore default bower_components path bower.json files
 /vendor/assets/bower_components
 *.bowerrc
 bower.json
 
-# Ignore pow environment settings
-.powenv
+# ignore IDE settings
+.idea*
