--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,5 @@
 # MySQL.  Versions 5.0+ are recommended.
 #
-# Install the MYSQL driver
-#   gem install mysql2
-#
-# Ensure the MySQL gem is defined in your Gemfile
-#   gem 'mysql2'
-#
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
@@ -14,12 +8,14 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password:
+  password: test
   socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
   database: Sweety_development
+  username: root
+  password: test
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -27,6 +23,8 @@ development:
 test:
   <<: *default
   database: Sweety_test
+  username: root
+  password: test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -50,5 +48,5 @@ test:
 production:
   <<: *default
   database: Sweety_production
-  username: Sweety
-  password: <%= ENV['SWEETY_DATABASE_PASSWORD'] %>
+#  username: Sweety
+#  password: <%= ENV['SWEETY_DATABASE_PASSWORD'] %>
