--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,12 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+amy:
+  name: amy
+  email: a@gmail.com
+  password: test1234
+
+steve:
+  name: Steve
+  email: s@gmail.com
+  password: test1234
