--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -1,9 +1,8 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
+# Sample Report Data
+daily:
   start_date: 2016-04-23
   end_date: 2016-04-23
 
-two:
-  start_date: 2016-04-23
-  end_date: 2016-04-23
+month:
+  start_date: 2016-04-01
+  end_date: 2016-04-26
